syntax = "proto3";

option go_package = "github.com/ahleongzc/leetcode-live-backend/proto;proto";

service InterviewProxy {
    rpc VerifyCandidate(VerifyCandidateRequest) returns (VerificationResponse) {}
}

message VerificationResponse {
    Interview interview = 1;
}

message VerifyCandidateRequest {
    string token = 1;
}

message Interview {
    uint64 id = 1;
}
